[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icf-mcp-server"
version = "0.1.0"
description = "MCP server for WHO ICF (International Classification of Functioning, Disability and Health)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Medseal" }
]
keywords = ["mcp", "icf", "who", "healthcare", "classification", "disability", "functioning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "httpx>=0.25.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
icf-mcp = "icf_mcp:main"

[project.urls]
Homepage = "https://github.com/stayce/icf-mcp-server"
Repository = "https://github.com/stayce/icf-mcp-server"
Issues = "https://github.com/stayce/icf-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/icf_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/icf_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
